--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "workspace",
-  "description": "",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "scripts": {
-    "start:production": "dist/index.js",
-    "start:dev": "tsx watch src/index.ts",
-    "start:dev:one": "tsx src/index.ts",
-    "build": "npx tsup src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Esliph/esliph-cli.git"
-  },
-  "keywords": [],
-  "author": "Esliph",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Esliph/esliph-cli/issues"
-  },
-  "homepage": "https://github.com/Esliph/esliph-cli#readme",
-  "devDependencies": {
-    "tslib": "^2.5.3",
-    "tsup": "^7.0.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "@esliph/util": "^1.0.18",
-    "@types/node": "^20.3.1",
-    "commander": "^11.0.0"
-  }
+    "name": "workspace",
+    "description": "",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "scripts": {
+        "start:production": "dist/index.js",
+        "start:dev": "tsx watch src/index.ts",
+        "start:dev:one": "tsx src/index.ts",
+        "build": "npx tsup src"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Esliph/esliph-cli.git"
+    },
+    "keywords": [],
+    "author": "Esliph",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Esliph/esliph-cli/issues"
+    },
+    "homepage": "https://github.com/Esliph/esliph-cli#readme",
+    "devDependencies": {
+        "tslib": "^2.5.3",
+        "tsup": "^7.0.0",
+        "tsx": "^3.12.7",
+        "prettier": "^2.3.2",
+        "typescript": "^5.1.3",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0"
+    },
+    "dependencies": {
+        "@esliph/util": "^1.0.18",
+        "@types/node": "^20.3.1",
+        "commander": "^11.0.0"
+    }
 }
