--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
     },
     "homepage": "https://github.com/Esliph/esliph-cli#readme",
     "devDependencies": {
-        "tslib": "^2.5.3",
-        "tsup": "^7.0.0",
-        "tsx": "^3.12.7",
-        "prettier": "^2.3.2",
-        "typescript": "^5.1.3",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0"
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.3.2",
+        "tslib": "^2.5.3",
+        "tsup": "^7.0.0",
+        "tsx": "^3.12.7",
+        "typescript": "^5.1.3"
     },
     "dependencies": {
         "@esliph/util": "^1.0.18",
         "@types/node": "^20.3.1",
-        "commander": "^11.0.0"
+        "@types/yeoman-generator": "^5.2.11",
+        "commander": "^11.0.0",
+        "yeoman-generator": "^5.9.0"
     }
 }
