--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/Esliph/esliph-cli#readme",
     "devDependencies": {
+        "@salesforce/eslint-config-lwc": "^3.5.0",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "^8.0.1",
@@ -33,10 +34,11 @@
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@esliph/util": "^1.0.18",
+        "@esliph/util": "^1.0.1-9.11",
         "@types/node": "^20.3.1",
         "@types/yeoman-generator": "^5.2.11",
         "commander": "^11.0.0",
-        "yeoman-generator": "^5.9.0"
+        "yeoman-generator": "^5.9.0",
+        "yo": "^4.3.1"
     }
 }
