--- a/src/generators/module/package.json
+++ b/src/generators/module/package.json
@@ -19,6 +19,7 @@
         "@types/node": "^20.3.1"
     },
     "dependencies": {
-        "yeoman-generator": "^5.9.0"
+        "yeoman-generator": "^5.9.0",
+        "yo": "^4.3.1"
     }
 }
