--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,12 +1,4 @@
 {
-  "extends": "./tsconfig.json",
-  "exclude": [
-    "./node_modules",
-    "./docs",
-    "./dist",
-    "./public",
-    "**/*sketch*",
-    "**/*spec.ts",
-    "**/*sketch.ts"
-  ]
+    "extends": "./tsconfig.json",
+    "exclude": ["./node_modules", "./docs", "./dist", "**/*sketch*", "**/*spec.ts", "**/*sketch.ts"]
 }
