--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,36 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "lib": ["ES6"],
-    "types": ["node"],
-    "declaration": false,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "alwaysStrict": true,
-    "checkJs": false,
-    "diagnostics": false,
-    "sourceMap": false,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": false,
-    "importHelpers": true,
-    "noImplicitAny": false,
-    "strictBindCallApply": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": false,
-    "moduleResolution": "node",
-    "noEmitHelpers": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "@*": ["./src/*"],
-      "$*": ["./*"]
+    "compilerOptions": {
+        "module": "commonjs",
+        "lib": ["ES6"],
+        "types": ["node"],
+        "declaration": false,
+        "removeComments": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
+        "target": "es2017",
+        "alwaysStrict": true,
+        "checkJs": false,
+        "diagnostics": false,
+        "sourceMap": false,
+        "outDir": "./dist",
+        "baseUrl": "./",
+        "incremental": true,
+        "skipLibCheck": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": false,
+        "importHelpers": true,
+        "noImplicitAny": false,
+        "strictBindCallApply": true,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": false,
+        "moduleResolution": "node",
+        "noEmitHelpers": true,
+        "esModuleInterop": true,
+        "strict": true,
+        "resolveJsonModule": true,
+        "paths": {
+            "@*": ["./src/*", "./*"]
+        }
     }
-  }
 }
