--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "@esliph/util-node": "^1.0.21",
         "@types/commander": "^2.12.2",
+        "@types/inquirer": "^9.0.3",
         "@types/node": "^20.3.1",
         "commander": "^11.0.0",
         "handlebars": "^4.7.7",
