--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
         "@types/node": "^20.3.1",
         "commander": "^11.0.0",
         "handlebars": "^4.7.7",
-        "inquirer": "^9.2.8"
+        "inquirer": "^9.2.8",
+        "inquirer-autocomplete-prompt": "^3.0.0",
+        "inquirer-press-to-continue": "^1.2.0",
+        "inquirer-search-checkbox": "^1.0.0"
     }
 }
