--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
     "description": "",
     "version": "1.0.0",
     "main": "dist/index.js",
+    "type": "module",
     "scripts": {
         "start:production": "dist/index.js",
         "start:dev": "tsx src/index.ts",
-        "build:dev": "npx tsup src",
-        "build": "npx tsc"
+        "build:dev": "tsup src",
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Esliph/esliph-cli.git"
+    },
+    "bin": {
+        "liph": "./dist/index.js"
     },
     "keywords": [],
     "author": "Esliph",
