fix: add templates folder in package

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "build": "tsc"
     },
     "files": [
-        "dist"
+        "dist",
+        "templates"
     ],
     "publishConfig": {
         "access": "public"
